# HearU

./: .gitignore  README.md
.github/workflows/: backend-ci.yaml  frontend-app-ci.yaml  frontend-ci.yaml  preview.yaml  production.yaml
HearU_api/: Health Check.bru  README.md  bruno.json  collection.bru
HearU_api/auth/: Create Default Admin.bru  (+7 more)
backend/: Dockerfile  SETUP.md  VOICE_SESSION_RESPONSE_API.md  deployment.md  gunicorn_conf.py  hearu-deployment.yaml  mypy.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  static_values.py
backend/app/models/: __init__.py  blog.py  chat.py  eve.py  journal.py  user.py  voice_session_response.py
backend/app/routes/auth/: auth.py
backend/app/routes/auth/schema/: auth.py
backend/app/routes/blog/: blog.py
backend/app/routes/blog/schema/: blog.py
backend/app/routes/chat/: chat.py
backend/app/routes/chat/schema/: chat.py
backend/app/routes/eve/: eve.py
backend/app/routes/eve/schema/: eve.py
backend/app/routes/journal/: journal.py
backend/app/routes/journal/schema/: journal.py
backend/app/routes/voice_session_response/: voice_session_response.py
backend/app/routes/voice_session_response/schema/: voice_session_response.py
backend/app/services/auth/: auth.py
backend/app/services/blog/: blog.py
backend/app/services/chat/: chat.py
backend/app/services/eve/: eve.py
backend/app/services/journal/: journal.py
backend/app/services/llm/: gemini.py
backend/app/services/voice_session_response/: voice_session_response.py
backend/app/utilities/: db.py  jwt.py  logger.py  stt.py  tts.py
frontend/: ANIMATIONS_README.md  index.html  package.json  tailwind.config.js
frontend_hearu/: pubspec.yaml
hearu_app_frontend/: README.md  pubspec.yaml
(+118 files in other folders)
