[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "asyncpg>=0.30.0",

    "fastapi>=0.116.1",

    "jwt>=1.4.0",

    "passlib>=1.7.4",

    "pydantic[email]>=2.11.7",

    "pydantic-settings>=2.10.1",

    "sqlalchemy>=2.0.43",

    "uvicorn[standard]>=0.35.0",

    "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]
